--- a/RideShareRestApi/appsettings.json
+++ b/RideShareRestApi/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=KORMAN\\SQLEXPRESS;Initial Catalog=AdessoRideShareV2;Integrated Security=True"
+    "Default": "Data Source=.;Initial Catalog=RideShare;Integrated Security=True"
   }
 }
